# honnyaku

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/agents/: designer.md  developer.md  manager-agent.md  tester.md
.github/workflows/: ci.yml  release.yml
.kiro/: project.json
.kiro/specs/ai-translation-desktop/: design.md  requirements.md  research.md  spec.json  tasks.md  test-type-selection.json
.kiro/steering/: product.md  structure.md  tech.md
docs/: USER_MANUAL.md  translation-quality-evaluation.md  translation-quality-testing-guide.md
docs/quality-test-results/: 2025-12-09-223523-evaluation.json
e2e-tests/: README.md  wdio.conf.js
e2e-tests/specs/: app-launch.spec.js  settings-panel.spec.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/llm/: claude_cli.rs  mod.rs
src-tauri/src/services/: clipboard.rs  mod.rs  permissions.rs  settings.rs  shortcut.rs  translation.rs
src-tauri/tests/: translation_quality_test.rs  translation_quality_test_cases.json
src/components/: SettingsPanel.tsx  TranslationPopup.tsx  index.ts
src/contexts/: SettingsContext.tsx
src/hooks/: index.ts  useClipboard.ts  usePermissions.ts  useSettings.ts  useShortcut.ts  useTranslation.ts  useTranslationFlow.ts
src/lib/: claude-cli.ts  language-detect.ts
src/types/: index.ts
(+35 files in other folders)
